--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ pytest-cov = "^2.10.1"
 requests-mock = "^1.8.0"
 
 [tool.poetry.scripts]
-page_loader = "page_loader.scripts.page_loader:main"
+page-loader = "page_loader.scripts.page_loader:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
